# sieve

./: .clasp.json  .gitignore  LICENSE  README.md  apps-scripts-projects  appsscript.json  package-lock.json  package.json  projects.yaml  pyproject.toml  reference-rust-code-dont-change  sieve  sieve.py  sieve2.yml  tsconfig.json
.cursor/: hooks.json
.github/workflows/: deploy-corporate.yml  deploy-home.yml  deploy-personal.yml  deploy-work.yml
configs/: corporate-config.yml  home-config.yml  personal-config.yml  work-config.yml
docs/: architecture.md  clasp-authentication-fix.md  clasp-authentication-troubleshooting.md
sieve/: __init__.py  cli.py  sieve.py
src/: main.ts  sieve.ts
src/config/: loader.ts
src/types/: index.ts
tests/: sieve1.yml  test_sieve.py
